<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="Home"
        android:icon="@drawable/navigation_home_24"
        android:id="@+id/nav_home"
        />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="Profile"
        android:icon="@drawable/navigation_profile_24"
        android:id="@+id/nav_profile"
        />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="Create"
        android:icon="@drawable/navigation_create_24"
        android:id="@+id/nav_create"
        />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="Messages"
        android:icon="@drawable/navigation_message_24"
        android:id="@+id/nav_msg"
        />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="Search"
        android:icon="@drawable/navigation_search_24"
        android:id="@+id/nav_search"
        />
</menu>