...
            android:layout_height="61dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp">

            <FrameLayout
                android:id="@+id/frame_explore"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/round_button_shape"
                android:backgroundTint="#FF9800"
...
                    android:textSize="18sp"
                    />
            </FrameLayout>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/postFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</FrameLayout>

